update MIMIC path on DOMStat laptop; add timing to some intensive code chunks

--- a/module1-04-Julia/module1-04-Julia.ipynb
+++ b/module1-04-Julia/module1-04-Julia.ipynb
@@ -16,23 +16,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Julia Version 1.7.1\n",
-      "Commit ac5cc99908 (2021-12-22 19:35 UTC)\n",
+      "Julia Version 1.7.3\n",
+      "Commit 742b9abb4d (2022-05-06 12:58 UTC)\n",
       "Platform Info:\n",
-      "  OS: macOS (x86_64-apple-darwin19.5.0)\n",
-      "  CPU: Intel(R) Core(TM) i7-6920HQ CPU @ 2.90GHz\n",
+      "  OS: macOS (x86_64-apple-darwin21.4.0)\n",
+      "  CPU: Intel(R) Core(TM) i9-9980HK CPU @ 2.40GHz\n",
       "  WORD_SIZE: 64\n",
       "  LIBM: libopenlibm\n",
       "  LLVM: libLLVM-12.0.1 (ORCJIT, skylake)\n",
       "Environment:\n",
-      "  JULIA_EDITOR = code\n",
-      "  JULIA_NUM_THREADS = 4\n"
+      "  JULIA_NUM_THREADS = 8\n",
+      "  JULIA_EDITOR = code\n"
      ]
     }
    ],
    "source": [
     "# for reproducibility\n",
     "versioninfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Desktop/2022-July-Workshop/module1-04-Julia`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Desktop/2022-July-Workshop/module1-04-Julia/Project.toml`\n",
+      " \u001b[90m [cbdf2221] \u001b[39mAlgebraOfGraphics v0.6.9\n",
+      " \u001b[90m [336ed68f] \u001b[39mCSV v0.10.4\n",
+      " \u001b[90m [13f3f980] \u001b[39mCairoMakie v0.8.9\n",
+      " \u001b[90m [a93c6f00] \u001b[39mDataFrames v1.3.4\n",
+      " \u001b[90m [b98c9c47] \u001b[39mPipe v1.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# activate environment to install packages in Project.toml\n",
+    "using Pkg\n",
+    "Pkg.activate(pwd())\n",
+    "Pkg.status()"
    ]
   },
   {
@@ -68,32 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "using AlgebraOfGraphics, CairoMakie, CSV, DataFrames, Dates, Pipe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/Users/huazhou/Documents/Box Sync/MIMIC/mimic-iv-1.0\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# path to MIMIC data\n",
-    "mimic_path = Sys.islinux() ? \"/home/shared/1.0\" : \"/Users/huazhou/Documents/Box Sync/MIMIC/mimic-iv-1.0\""
    ]
   },
   {
@@ -104,10 +115,31 @@
     {
      "data": {
       "text/plain": [
-       "1000"
+       "\"/Users/huazhou/Desktop/mimic-iv-1.0\""
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# path to MIMIC data\n",
+    "mimic_path = Sys.islinux() ? \"/home/shared/1.0\" : \"/Users/huazhou/Desktop/mimic-iv-1.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +246,7 @@
        "\u001b[36m                                                                                                                                                76519 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +344,7 @@
        "\u001b[36m                                                                                                                                                                                                                                                                       523719 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +442,7 @@
        "\u001b[36m                                                                382257 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,9 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4.273566 seconds (32.95 k allocations: 2.136 GiB, 2.37% gc time, 2.14% compilation time)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -507,13 +546,13 @@
        "\u001b[36m                                                             23679037 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chartevents_tbl = CSV.File(\n",
+    "@time chartevents_tbl = CSV.File(\n",
     "    mimic_path * \"/icu/chartevents_filtered_itemid.csv.gz\", \n",
     "    dateformat = \"yyyy-mm-dd HH:MM:SS\"\n",
     "    ) |> \n",
@@ -529,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +601,7 @@
        "   5 │ 2165-04-24T08:00:00      56.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -587,12 +626,13 @@
        "FigureGrid()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# be patient: time-to-first-plot is long!\n",
     "x = chartevents_subset[!, :charttime]\n",
     "y = chartevents_subset[!, :valuenum]\n",
     "df = (; x, y)\n",
@@ -651,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +768,7 @@
        "\u001b[36m                                                                                                                                                53129 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,9 +790,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 17.578165 seconds (249.52 M allocations: 11.234 GiB, 17.68% gc time, 37.84% compilation time)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -827,13 +874,13 @@
        "\u001b[36m                                                                           53115 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chartevents_tbl_1ststay = @pipe chartevents_tbl |>\n",
+    "@time chartevents_tbl_1ststay = @pipe chartevents_tbl |>\n",
     "    # pull in the intime/outtime of each ICU stay\n",
     "    rightjoin(_, select(icustays_tbl_1ststay, :stay_id, :intime, :outtime), on = :stay_id) |> \n",
     "    # only keep items during this ICU intime\n",
@@ -866,9 +913,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.658299 seconds (9.67 M allocations: 1.951 GiB, 8.55% gc time, 73.93% compilation time)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -943,13 +997,13 @@
        "\u001b[36m                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                53129 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mimic_icu_cohort = @pipe icustays_tbl_1ststay |>\n",
+    "@time mimic_icu_cohort = @pipe icustays_tbl_1ststay |>\n",
     "    # merge data frames\n",
     "    leftjoin(_, admissions_tbl, on = [:subject_id, :hadm_id]) |>\n",
     "    leftjoin(_, patients_tbl, on = [:subject_id]) |>\n",
@@ -981,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1078,7 @@
        "  10 │ thirty_day_mort  0.0996802  false                              0.0     true                        0  Union{Missing, Bool}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1126,7 @@
        "FigureAxisPlot()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1168,7 @@
        "FigureAxisPlot()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.1",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -1171,7 +1225,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.1"
+   "version": "1.7.3"
   },
   "toc-autonumbering": true
  },
