--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -108,7 +108,8 @@
     "import pandas as pd\n",
     "# we also load numpy for array computation for convenience\n",
     "import numpy as np\n",
-    "mimic_path = \"/home/shared/1.0\""
+    "import platform\n",
+    "mimic_path = \"/Users/huazhou/Desktop/mimic-iv-1.0\" if platform.uname().node == \"RELMDOMFAC30610\" else \"/home/shared/1.0\""
    ]
   },
   {
