add html file for GeneticsMakie

--- a/module2-02-GeneticsMakie/module2-02-GeneticsMakie.ipynb
+++ b/module2-02-GeneticsMakie/module2-02-GeneticsMakie.ipynb
@@ -35,24 +35,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfdc2842",
-   "metadata": {},
-   "source": [
-    "# Why Makie.jl?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "45158d6a",
    "metadata": {},
    "source": [
+    "# Why Makie.jl?\n",
+    "\n",
     "### *1. Plotting millions of data points is easy*\n",
     "\n",
     "   <p align=\"center\">\n",
     "   <img src=\"./MHC-LD.png\" width=\"400\">\n",
     "   </p>\n",
     "   \n",
-    "*LD structure for ~66,000 SNPs in MHC region → ≈2 billion unique data points*"
+    "*LD structure for ~66,000 SNPs in the MHC region → ≈2 billion unique data points*\n",
+    "\n",
+    "For more information on the MHC, see [Horton et al. 2004](https://www.nature.com/articles/nrg1489)"
    ]
   },
   {
@@ -65,17 +61,9 @@
     "   <img src=\"./complex-layout.png\" width=\"600\">\n",
     "   </p>\n",
     "   \n",
-    "*Raw publication-quality figure using Makie.jl's default layout tools w/o further modifications*\n",
+    "*Publication-quality figure generated using Makie.jl's default layout tools w/o further modifications (e.g. in Illustrator)*\n",
     "\n",
     "### Looks interesting? Check out Makie.jl [documentation](https://makie.juliaplots.org/stable/)!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1701cec8",
-   "metadata": {},
-   "source": [
-    "# Why GeneticsMakie.jl?"
    ]
   },
   {
@@ -83,9 +71,11 @@
    "id": "91ac81a4",
    "metadata": {},
    "source": [
+    "# Why GeneticsMakie.jl?\n",
+    "\n",
     "+ The purpose of GeneticsMakie.jl is to facilitate visualization and interpretation of genetic association results\n",
     "+ This is achieved by visualizing $\\geq 100$s of genetic and genomic data simultaneously\n",
-    "+ GeneticsMakie.jl is supposed to work with other OpenMendel and Julia Data Science packages"
+    "+ GeneticsMakie.jl is supposed to work with other OpenMendel (e.g. SnpArrays.jl) and Julia Data Science (e.g. DataFrames.jl) packages"
    ]
   },
   {
@@ -111,17 +101,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ed5891",
-   "metadata": {},
-   "source": [
-    "# Example code for ADAMTSL3 locus in inguinal hernia"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2a58697f",
    "metadata": {},
    "source": [
+    "# Example code for ADAMTSL3 locus in inguinal hernia\n",
+    "\n",
     "   <p align=\"center\">\n",
     "   <img src=\"./hernia.png\" width=\"600\">\n",
     "   </p>"
@@ -132,7 +116,10 @@
    "id": "1c8d37c3",
    "metadata": {},
    "source": [
-    "Visualizing the backbone of a LocusZoom plot requires genetic association data, gene annotation data, and LD reference panel. "
+    "Visualizing the backbone of a LocusZoom plot requires genetic association data, gene annotation data, and LD reference panel\n",
+    "- GWAS summary statistics can be downloaded from [Danish National Biobank portal](https://www.danishnationalbiobank.com/gwas/hernia)\n",
+    "- For gene annotation, we can use [GENCODE v39](https://www.gencodegenes.org/human/release_39lift37.html)\n",
+    "- For LD reference panel, we can use [1000 Genomes Project](https://www.internationalgenome.org/data/)"
    ]
   },
   {
@@ -142,19 +129,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling GeneticsMakie [8ca62643-82d8-47b5-a233-a06d1654fb35]\n",
-      "└ @ Base loading.jl:1423\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39munknown command \\Join\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ MathTeXEngine ~/.julia/packages/MathTeXEngine/ZP0gS/src/parser/commands_registration.jl:48\u001b[39m\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mCompiling VCF parser...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using GeneticsMakie, CairoMakie, CSV, DataFrames, SnpArrays"
    ]
@@ -162,14 +137,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0aebdda9",
+   "id": "165a917c",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_theme!(font = \"Arial\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0aebdda9",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6.749336 seconds (3.57 M allocations: 269.635 MiB, 1.25% gc time, 94.20% compilation time)\n"
+      "  6.724185 seconds (3.57 M allocations: 269.634 MiB, 1.38% gc time, 94.54% compilation time)\n"
      ]
     },
     {
@@ -177,7 +164,7 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Loading GENCODE v39 annotation for chromosome 15\n",
-      "└ @ Main In[3]:2\n"
+      "└ @ Main In[4]:1\n"
      ]
     },
     {
@@ -212,13 +199,12 @@
        " \"gene_id \\\"ENSG00000248472.8_1\\\"; \" ⋯ 509 bytes ⋯ \"\\\"; remap_status \\\"full_contig\\\";\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_theme!(font = \"Arial\")\n",
     "@info \"Loading GENCODE v39 annotation for chromosome 15\"\n",
     "@time gencode = CSV.read(\"./gencode.v39lift37.annotation.chr15.gtf.gz\", DataFrame,\n",
     "    header = [\"seqnames\", \"source\", \"feature\", \"start\", \"end\", \"score\", \"strand\", \"phase\", \"info\"],\n",
@@ -227,8 +213,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d55413e7",
+   "metadata": {},
+   "source": [
+    "The `:info` column in GENCODE gtf file contains [rich information](https://www.gencodegenes.org/pages/data_format.html) about each gene/isoform "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5ccc8fed",
    "metadata": {},
    "outputs": [
@@ -252,7 +246,7 @@
        " \"transcript_support_level\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4ef3d46b",
    "metadata": {},
    "outputs": [],
@@ -275,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8e93ff10",
    "metadata": {},
    "outputs": [
@@ -284,19 +278,19 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Loading 1000 Genomes European reference panel for chromosome 15\n",
-      "└ @ Main In[6]:1\n"
+      "└ @ Main In[7]:1\n"
      ]
     }
    ],
    "source": [
     "@info \"Loading 1000 Genomes European reference panel for chromosome 15\"\n",
     "kgp = SnpData(\"./kgp.chr15\")\n",
-    "@assert (503, 200_311) == size(kgp)"
+    "@assert size(kgp) == (503, 200_311)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f7270907",
    "metadata": {},
    "outputs": [
@@ -305,7 +299,7 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Loading GWAS results for chromosome 15\n",
-      "└ @ Main In[7]:1\n"
+      "└ @ Main In[8]:1\n"
      ]
     },
     {
@@ -382,7 +376,7 @@
        "\u001b[36m                                               2 columns and 299603 rows omitted\u001b[0m"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "acc2b6bb",
    "metadata": {},
    "outputs": [],
@@ -404,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f1464cd7",
    "metadata": {},
    "outputs": [
@@ -430,7 +424,7 @@
        "   1 │ 15      84419314  4.24936e-8"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,8 +434,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45bb2ccc",
+   "metadata": {},
+   "source": [
+    "[GCTA-COJO](https://www.nature.com/articles/ng.2213) is planned to be implemented in the future for `findgwasloci`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "55dc5d9e",
    "metadata": {
     "scrolled": true
@@ -471,7 +473,7 @@
        "   2 │ 15      67467297  2.48762e-7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "28d3c259",
    "metadata": {},
    "outputs": [
@@ -508,7 +510,7 @@
        "   1 │ 15      84419314  TUBAP4     10363"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "483a1849",
    "metadata": {},
    "outputs": [
@@ -545,7 +547,7 @@
        "   1 │ 15      84419314  TUBAP4     10778"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,45 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4c45b78f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"data-frame\"><p>1 rows × 4 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>CHR</th><th>BP</th><th>gene</th><th>distance</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Int64\">Int64</th><th title=\"String\">String</th><th title=\"Int64\">Int64</th></tr></thead><tbody><tr><th>1</th><td>15</td><td>84419314</td><td>ADAMTSL3</td><td>96474</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& CHR & BP & gene & distance\\\\\n",
-       "\t\\hline\n",
-       "\t& String & Int64 & String & Int64\\\\\n",
-       "\t\\hline\n",
-       "\t1 & 15 & 84419314 & ADAMTSL3 & 96474 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m1×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m CHR    \u001b[0m\u001b[1m BP       \u001b[0m\u001b[1m gene     \u001b[0m\u001b[1m distance \u001b[0m\n",
-       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m Int64    \u001b[0m\u001b[90m String   \u001b[0m\u001b[90m Int64    \u001b[0m\n",
-       "─────┼──────────────────────────────────────\n",
-       "   1 │ 15      84419314  ADAMTSL3     96474"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GeneticsMakie.findclosestgene(loci, gencode; proteincoding = true)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
-   "id": "ae1495e0",
+   "id": "4c45b78f",
    "metadata": {},
    "outputs": [
     {
@@ -625,12 +590,49 @@
     }
    ],
    "source": [
-    "loci = GeneticsMakie.findclosestgene(loci, gencode; start = true, proteincoding = true)"
+    "GeneticsMakie.findclosestgene(loci, gencode; proteincoding = true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "ae1495e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>1 rows × 4 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>CHR</th><th>BP</th><th>gene</th><th>distance</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Int64\">Int64</th><th title=\"String\">String</th><th title=\"Int64\">Int64</th></tr></thead><tbody><tr><th>1</th><td>15</td><td>84419314</td><td>ADAMTSL3</td><td>96474</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccc}\n",
+       "\t& CHR & BP & gene & distance\\\\\n",
+       "\t\\hline\n",
+       "\t& String & Int64 & String & Int64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & 15 & 84419314 & ADAMTSL3 & 96474 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m1×4 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m CHR    \u001b[0m\u001b[1m BP       \u001b[0m\u001b[1m gene     \u001b[0m\u001b[1m distance \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m Int64    \u001b[0m\u001b[90m String   \u001b[0m\u001b[90m Int64    \u001b[0m\n",
+       "─────┼──────────────────────────────────────\n",
+       "   1 │ 15      84419314  ADAMTSL3     96474"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loci = GeneticsMakie.findclosestgene(loci, gencode; start = true, proteincoding = true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "45d423e2",
    "metadata": {},
    "outputs": [
@@ -638,7 +640,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 73.789035 seconds (245.55 M allocations: 12.107 GiB, 3.41% gc time, 84.40% compilation time)\n"
+      " 73.092486 seconds (245.55 M allocations: 12.107 GiB, 3.10% gc time, 83.83% compilation time)\n"
      ]
     },
     {
@@ -646,11 +648,9 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Working on ADAMTSL3 gene\n",
-      "└ @ Main In[15]:3\n",
-      "┌ Info: Subsetting GWAS results\n",
-      "└ @ Main In[15]:7\n",
+      "└ @ Main In[16]:3\n",
       "┌ Info: Plotting LocusZoom\n",
-      "└ @ Main In[15]:9\n"
+      "└ @ Main In[16]:8\n"
      ]
     }
    ],
@@ -661,10 +661,9 @@
     "        window = 1e6\n",
     "        chr, start, stop = GeneticsMakie.findgene(gene, gencode)\n",
     "        range1, range2 = start - window, stop + window\n",
-    "        @info \"Subsetting GWAS results\"\n",
     "        gwas_subset = gwas[findall((gwas.CHR .== chr) .& (gwas.BP .>= range1) .& (gwas.BP .<= range2)), :]\n",
     "        @info \"Plotting LocusZoom\"\n",
-    "        f = Figure(resolution = (306, 1500))\n",
+    "        f = Figure(resolution = (306, 792))\n",
     "        axs = [Axis(f[i, 1]) for i in 1:3]\n",
     "        GeneticsMakie.plotlocus!(axs[1], chr, range1, range2, gwas_subset)\n",
     "        GeneticsMakie.plotlocus!(axs[2], chr, range1, range2, gwas_subset; ld = kgp)\n",
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6e8bd4b3",
    "metadata": {},
    "outputs": [
@@ -707,7 +706,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 10.403400 seconds (57.06 M allocations: 2.102 GiB, 3.55% gc time)\n"
+      " 10.318701 seconds (57.06 M allocations: 2.102 GiB, 3.77% gc time)\n"
      ]
     },
     {
@@ -715,11 +714,9 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Working on ADAMTSL3 gene\n",
-      "└ @ Main In[15]:3\n",
-      "┌ Info: Subsetting GWAS results\n",
-      "└ @ Main In[15]:7\n",
+      "└ @ Main In[16]:3\n",
       "┌ Info: Plotting LocusZoom\n",
-      "└ @ Main In[15]:9\n"
+      "└ @ Main In[16]:8\n"
      ]
     }
    ],
@@ -743,15 +740,16 @@
    "metadata": {},
    "source": [
     "# An example workflow for phenome-scale LocusZoom\n",
-    "Hypothetical scenario: you have run a GWAS and would like to visualize genome-wide significant loci automatically with other GWAS results and functional genomic annotations\n",
     "\n",
-    "1. Munge GWAS summary statistics (using mungesumstats! function)\n",
-    "2. Save each GWAS result as an Arrow or Parquet file (using Arrow.jl or Parquet.jl packages)\n",
-    "3. Find GWAS loci for your phenotypes of interest (using findgwasloci function)\n",
-    "4. Iterate through GWAS loci, subsetting genomic regions from Arrow or Parquet files\n",
+    "Hypothetical scenario: you have run a GWAS and would like to visualize genome-wide significant loci automatically with 100s of GWAS results and functional genomic annotations\n",
+    "\n",
+    "1. Munge GWAS summary statistics (using `mungesumstats!` function)\n",
+    "2. Save each GWAS result as an Arrow or Parquet file (using Arrow.jl or Parquet.jl)\n",
+    "3. Find GWAS loci for your phenotypes of interest (using `findgwasloci` function)\n",
+    "4. Iterate through GWAS loci, subsetting genomic regions from Arrow or Parquet files (using DataFrames.jl)\n",
     "5. Add other functional genomic data as separate layers as needed\n",
     "\n",
-    "Checkout example code in https://github.com/mmkim1210/GeneticsMakieExamples!"
+    "Checkout [example code](https://github.com/mmkim1210/GeneticsMakieExamples)!"
    ]
   },
   {
@@ -763,7 +761,9 @@
     " \n",
     "   <p align=\"center\">\n",
     "   <img src=\"./manhattan.png\" width=\"800\">\n",
-    "   </p>"
+    "   </p>\n",
+    " \n",
+    "*An increase in sample size has led to many more dicovery of GWAS loci for schizophrenia*"
    ]
   }
  ],
