--- a/module2-01-GeneticVariantData/module2-01-GeneticVariantData.ipynb
+++ b/module2-01-GeneticVariantData/module2-01-GeneticVariantData.ipynb
@@ -543,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(PGENFiles.n_variants(p)) # consider changing it to num_..."
+    "print(PGENFiles.n_variants(p)) "
    ]
   },
   {
