incorporate Xiaoqian's corrections

--- a/module1-02-R/module1-02-R.ipynb
+++ b/module1-02-R/module1-02-R.ipynb
@@ -241,15 +241,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
-    "<img src=\"./MIMIC.png\" width=\"500\">\n",
-    "</p>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Data files (`csv.gz`) are grouped under three directories; `core`, `hosp`, and `icu`.\n",
     "\n",
     "Most relevant to this tutorial are `icustays.csv.gz`, `admissions.csv.gz`, `patients.csv.gz`, and `chartevents.csv.gz`. Let's first peek into the content of each file, by calling Bash commands within R. Before that, we introduce the pipe, which is heavily used in this tutorial."
@@ -800,7 +791,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       " 12.982  12.733   3.824 "
+       " 12.755  13.059   3.649 "
       ]
      },
      "metadata": {},
@@ -1207,7 +1198,7 @@
     "\n",
     "Remember we want to model: \n",
     "\n",
-    "**thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + temp_f + resp_rate**\n",
+    "**thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + temp_f**\n",
     "\n",
     "Let's start with a numerical summary of variables of interest."
    ]
