--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -471,7 +471,7 @@
     "\n",
     "Remember we want to model: \n",
     "\n",
-    "thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + bp_mean + bp_syst + temp_f + resp_rate\n",
+    "thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + temp_f\n",
     "\n",
     "Let's start with a numerical summary of variables of interest.\n",
     "\n",
@@ -734,7 +734,7 @@
    "id": "54b81545-8b43-4d5b-9954-4391b3a09b09",
    "metadata": {},
    "source": [
-    "## Pros and Cons of Python for Data Science\n",
+    "## Pros and Cons of Python\n",
     "\n",
     "\n",
     "__Pros__: \n",
