--- a/module1-01-intro/module1-01-intro.ipynb
+++ b/module1-01-intro/module1-01-intro.ipynb
@@ -21,7 +21,7 @@
     "    \n",
     "    Source: [DataCamp](https://www.datacamp.com/).\n",
     "\n",
-    "- Data is increasing in [volume, variety, velocity, variety, and value](http://www.forbes.com/sites/oreillymedia/2012/01/19/volume-velocity-variety-what-you-need-to-know-about-big-data/) (5V).\n",
+    "- Data is increasing in [volume, variety, velocity, veracity, and value](http://www.forbes.com/sites/oreillymedia/2012/01/19/volume-velocity-variety-what-you-need-to-know-about-big-data/) (5V).\n",
     "\n",
     "    <p align=\"center\">\n",
     "      <img src=\"./4-Vs-of-big-data.jpg\" width=\"500\">\n",
@@ -87,11 +87,17 @@
    "source": [
     "## What's this workshop about? \n",
     "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./data-science.png\" height=\"300\">\n",
+    "</p>\n",
+    "\n",
+    "Source: [R for Data Science](https://r4ds.had.co.nz/).    \n",
+    "\n",
     "- Hands-on experience on a typical data science workflow using Julia, Python, and R. \n",
     "\n",
     "> data ingestion (from text files or databases) -> data wrangling (filtering, selecting, merging, pivoting) -> data visualization (static, interactive) -> data analytics\n",
     "\n",
-    "- Module 1 practices the workflow starting from text files or databases.\n",
+    "- Module 1 practices the workflow starting from text files.\n",
     "\n",
     "- Module 2 practices the workflow starting from genomic data.\n",
     "\n",
@@ -125,13 +131,7 @@
    "source": [
     "## How to get started\n",
     "\n",
-    "1. Log into server: <>. \n",
-    "\n",
-    "2. Git clone tutorials: type `git clone https://github.com/LangeSymposium/2022-July-Workshop.git` at terminal.\n",
-    "\n",
-    "3. In JupyterLab, navigate to the Jupyter notebooks and run code chunks.\n",
-    "\n",
-    "4. Orientation to the JupyterLab interface."
+    "Follow instructions at [workshop website](https://langesymposium.github.io/2022-July-Workshop/)."
    ]
   }
  ],
